crates/monochange/tests/snapshots/release_notes_and_propagation__app@ungrouped_patch.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: app_changelog
---
# Changelog

## app 1.0.1 ([DATE])

### Changed

- **No package-specific changes were recorded; `workflow-app` was updated to 1.0.1.**
