crates/monochange/tests/snapshots/release_notes_and_propagation__core@ungrouped_patch.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: core_changelog
---
# Changelog

## core 1.1.0 ([DATE])

### Features

- **add core feature.**
