crates/monochange/tests/snapshots/release_notes_and_propagation__group@grouped_default.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: group_changelog
---
# Changelog

## 1.1.0 ([DATE])

Grouped release for `sdk`.

### Features

- **add core feature.**
  _Packages:_ 🟠 _core_
