crates/monochange/tests/snapshots/release_notes_and_propagation__multiline_details_markdown@the_release_manifest_reports_one_entry_with_per_package_bumps.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: contents
---
The fractional-field support is now two independent features.

This one changeset targets three packages with three different change types.
It must render once, in the breaking section, listing all three packages.
